--- a/index.html
+++ b/index.html
@@ -151,8 +151,15 @@
   <div class="cta" id="payment">
     <h2>Payment Options</h2>
     <p>Use PayPal or Cash App to secure your spot in any program.</p>
-    <p><strong>PayPal:</strong> <a href="https://www.paypal.me/YOURPAYPAL" target="_blank">paypal.me/YOURPAYPAL</a></p>
-    <p><strong>Cash App:</strong> $YourCashAppTag</p>
+    <!-- PayPal Button -->
+<a href="https://www.paypal.me/ranitabrooks" target="_blank">
+  <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" alt="Donate with PayPal" width="150">
+</a>
+
+<!-- Cash App Button -->
+<a href="https://cash.app/$SharaiBrooks" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Square_Cash_app_logo.svg" alt="Donate with Cash App" width="150">
+</a>
   </div>
 
   <footer>
