--- a/index.html
+++ b/index.html
@@ -151,14 +151,17 @@
   <div class="cta" id="payment">
     <h2>Payment Options</h2>
     <p>Use PayPal or Cash App to secure your spot in any program.</p>
-    <!-- PayPal Button -->
+   <h2>Pay With</h2>
+<p>You can pay me using PayPal or Cash App below:</p>
+
+<!-- PayPal Button -->
 <a href="https://www.paypal.me/ranitabrooks" target="_blank">
-  <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" alt="Donate with PayPal" width="150">
+  <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" alt="Pay with PayPal" width="150">
 </a>
 
 <!-- Cash App Button -->
 <a href="https://cash.app/$SharaiBrooks" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Square_Cash_app_logo.svg" alt="Donate with Cash App" width="150">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Square_Cash_app_logo.svg" alt="Pay with Cash App" width="150">
 </a>
   </div>
 
